# seal-flow

./: .gitignore  Cargo.toml  README.md  README_CN.md
benches/: asymmetric_benchmark.rs  hybrid_benchmark.rs  symmetric_benchmark.rs
examples/: high_level_hybrid.rs  high_level_symmetric.rs  hybrid_encryption.rs  large_file_signed_streaming.rs  mid_level_hybrid.rs  mid_level_symmetric.rs  readme_aad.rs  readme_advanced_key_derivation.rs  readme_digital_signatures.rs  readme_hybrid_workflow.rs  readme_key_derivation.rs  readme_symmetric_workflow.rs  simple_symmetric.rs  streaming_symmetric.rs
examples/readme/: aad.rs  advanced_key_derivation.rs  digital_signatures.rs  hybrid_workflow.rs  key_provider.rs  mod.rs  readme_hybrid_workflow.rs  readme_key_provider.rs  symmetric_workflow.rs
src/: algorithms.rs  body.rs  common.rs  error.rs  hybrid.rs  impls.rs  keys.rs  lib.rs  processor.rs  provider.rs  seal.rs  symmetric.rs
src/algorithms/: asymmetric.rs  definitions.rs  hybrid.rs  signature.rs  symmetric.rs  traits.rs  xof.rs
src/algorithms/kdf/: key.rs  passwd.rs
src/body/: asynchronous.rs  config.rs  ordinary.rs  parallel.rs  parallel_streaming.rs  streaming.rs  traits.rs
src/common/: algorithms.rs  buffer.rs  config.rs  header.rs  mode.rs
src/hybrid/: asynchronous.rs  common.rs  config.rs  ordinary.rs  parallel.rs  parallel_streaming.rs  pending.rs  streaming.rs  traits.rs
src/impls/: asynchronous.rs  ordinary.rs  parallel.rs  parallel_streaming.rs  streaming.rs
src/keys/: provider.rs
src/processor/: api.rs  body.rs  config.rs  ordinary.rs  parallel.rs  parallel_streaming.rs  streaming.rs  traits.rs
src/processor/body/: asynchronous.rs  ordinary.rs  parallel.rs  parallel_streaming.rs  streaming.rs
src/seal/: hybrid.rs  symmetric.rs  traits.rs
src/seal/hybrid/: decryptor.rs  encryptor.rs  suites.rs
src/seal/symmetric/: decryptor.rs  encryptor.rs
src/symmetric/: asynchronous.rs  common.rs  config.rs  ordinary.rs  parallel.rs  parallel_streaming.rs  pending.rs  streaming.rs  traits.rs
tests/: interop_test.rs  interoperability_matrix.rs  workflow.rs
